# cxxlab

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE
.github/workflows/: coverage.yml  format.yml  main.yml
apps/: CMakeLists.txt  pipes.cpp  queues.cpp
cmake/: coverage.cmake
include/cxxlab/: concepts.hpp  pipes.hpp  ranges.hpp  type_traits.hpp
include/cxxlab/concepts/: chrono.hpp
include/cxxlab/functional/: repeat.hpp
include/cxxlab/lockfree/spsc/: static_blocking_queue.hpp  static_queue.hpp
include/cxxlab/lockfree/spsc/detail/: slot.hpp
include/cxxlab/memory/: aligned_wrapper.hpp  cache_line_size.hpp
include/cxxlab/mutex/: ttas_mutex.hpp
include/cxxlab/pipes/: adaptor.hpp  drop.hpp  drop_while.hpp  filter.hpp  iterator_interface.hpp  null.hpp  stride.hpp  take.hpp  take_while.hpp  transform.hpp
include/cxxlab/ranges/: cached_iterator.hpp  slice_view.hpp  transient_cache.hpp
include/cxxlab/type_traits/: apply_cvref.hpp  conditional_storage.hpp  copy_cvref.hpp  like.hpp
tests/: CMakeLists.txt  test_main.cpp
tests/concepts/: test_chrono.cpp
tests/functional/: test_repeat.cpp
tests/lockfree/spsc/: test_static_blocking_queue.cpp  test_static_queue.cpp
tests/memory/: test_aligned_wrapper.cpp
tests/pipes/: test_drop.cpp  test_drop_while.cpp  test_filter.cpp  test_null.cpp  test_pipes.cpp  test_stride.cpp  test_take.cpp  test_take_while.cpp  test_transform.cpp
tests/ranges/: test_slice_view.cpp
tests/type_traits/: test_apply_cvref.cpp  test_conditional_storage.cpp  test_copy_cvref.cpp  test_like.cpp
